--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blog Generator</title>
-    <link rel="stylesheet" href="blogGen.css">
+    <link rel="stylesheet" href="style.css">
     <style>
      .cke{ 
         visibility:hidden;
